--- a/locker/src/main/res/values/strings.xml
+++ b/locker/src/main/res/values/strings.xml
@@ -12,4 +12,21 @@
     <string name="disable_passcode">Disable pin</string>
     <string name="enable_passcode">Enable pin</string>
 
+    <string name="txtEnterPin">Enter Pin</string>
+
+    <string name="btn1">1</string>
+    <string name="btn2">2</string>
+    <string name="btn3">3</string>
+    <string name="btn4">4</string>
+    <string name="btn5">5</string>
+    <string name="btn6">6</string>
+    <string name="btn7">7</string>
+    <string name="btn8">8</string>
+    <string name="btn9">9</string>
+    <string name="btn0">0</string>
+    <string name="btnClear">CLEAR</string>
+    <string name="btnDelete">DEL</string>
+
+    <string name="imgvLockerIcon">Locker Icon</string>
+
 </resources>
